# minispconv

./: .gitignore  LICENSE  README.md  pyproject.toml
src/minispconv/: __init__.py
tests/: test_smoke.py
