[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minispconv"
version = "0.1.0"
description = "Minimal Sparse Convolution Library"
requires-python = ">=3.12"
authors = [
    { name = "HuaTsai", email = "huatsai42@gmail.com" }
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/minispconv"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
pytorch-gpu = ">=2.12.1,<3"
pytest = ">=9.1.1,<10"
ruff = ">=0.15.21,<0.16"

[tool.pixi.pypi-dependencies]
minispconv = { path = ".", editable = true }

[tool.pixi.feature.cu13.system-requirements]
cuda = "13"

[tool.pixi.feature.cu13.dependencies]
cuda-toolkit = ">=13.3.1,<14"

[tool.pixi.feature.cu12.system-requirements]
cuda = "12"

[tool.pixi.feature.cu12.dependencies]
cuda-toolkit = ">=12.9.2,<13"

[tool.pixi.environments]
default = ["cu13"]
cu12 = ["cu12"]
